--- a/Amravati.html
+++ b/Amravati.html
@@ -2,16 +2,7 @@
 <html>
   <head>
     <title>Map</title>
-
-    <style type="text/css">
-      /* Set the size of the div element that contains the map */
-      #map {
-        height: 400px;
-        /* The height is 400 pixels */
-        width: 100%;
-        /* The width is the width of the web page */
-      }
-    </style>
+    <link href="style.css" rel="stylesheet" />
     <script>
       // Initialize and add the map
       function initMap() {
@@ -42,3 +33,4 @@
     ></script>
   </body>
 </html>
+
