--- a/index.html
+++ b/index.html
@@ -5,20 +5,30 @@
 <head>
 	<title>Priority Pulse</title>
     <meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="projects.css" rel="stylesheet" />
 </head>
 
 <body>
-
+	<div id="background-wrap">
+    <div class="bubble x1"></div>
+    <div class="bubble x2"></div>
+    <div class="bubble x3"></div>
+    <div class="bubble x4"></div>
+    <div class="bubble x5"></div>
+    <div class="bubble x6"></div>
+    <div class="bubble x7"></div>
+    <div class="bubble x8"></div>
+    <div class="bubble x9"></div>
+    <div class="bubble x10"></div>
+</div>
 	<div class="maindiv">
 
 		<div class="banner">Priority Pulse</div>
 		<div class="contentdiv roundcorners" id="tablediv">
 
 		</div>
-
-	</div>
-
+ </div>
     <script src="places.js"></script>
     <script src="creatinghtmltables.js"></script>
 </body>
